# Rocket

core/lib/: Cargo.toml
core/lib/src/listener/: tls.rs
core/lib/src/tls/: config.rs  mod.rs  resolver.rs
examples/: Cargo.toml
examples/gnostr-chat/: Cargo.toml
examples/gnostr-chat/src/: main.rs
examples/gnostr-config/: Cargo.toml  Rocket.toml
examples/gnostr-config/src/: main.rs
